--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>{{.Site.Title}}</title>
+	<title>{{.Title}} - {{.Site.Title}} </title>
 	<meta name="description" content="Potate - TEMPLATE_CODE" />
 	<meta name="author" content="eriizu" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -34,24 +34,6 @@
 		</section>
 		{{ end }}
 
-		<section class="mt-4">
-			<h2 class="text-2xl">Construction d'un blog avec Hugo</h2>
-			<p class="text-gray-600">2021-05-18&nbsp; • &nbsp;catg</p>
-			<p class="text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non quod aut
-				delectus vitae
-				doloremque temporibus aspernatur iste minima expedita, aliquid blanditiis voluptates
-				enim. Id maxime expedita, veniam sit sint laudantium.
-
-		</section>
-		<section class="mt-4">
-			<h2 class="text-2xl">Découverte de tailwindcss</h2>
-			<p class="text-gray-600">2021-05-18&nbsp; • &nbsp;catg</p>
-			<p class="text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non quod aut
-				delectus vitae
-				doloremque temporibus aspernatur iste minima expedita, aliquid blanditiis voluptates
-				enim. Id maxime expedita, veniam sit sint laudantium.
-
-		</section>
 	</div>
 </body>
 
