--- a/tailwind.scss
+++ b/tailwind.scss
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  p {
+    @apply mt-4;
+  }
+}
+
+@layer components {
+  .highlight {
+    @apply mt-4 p-4 shadow-2xl;
+    background-color: #282a36;
+  }
+
+  .caca {
+    @apply mt-11;
+  }
+}
