--- a/layouts/partials/body/nav.html
+++ b/layouts/partials/body/nav.html
@@ -1,6 +1,9 @@
 <h1 class="text-3xl">{{.Title}}</h1>
 <nav class="flex flex-row">
-	<div class="mr-4">~eriizu</div>
-	<div class="mr-4">publications</div>
-	<div class="mr-4">à propos</div>
+	<a href="/">
+		<div class="mr-4">publications</div>
+	</a>
+	<a href="/about">
+		<div class="mr-4">à propos</div>
+	</a>
 </nav>
