--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,14 +1,10 @@
 <!doctype html>
 <html lang=fr>
 
-<head>
-	<meta charset=utf-8>
-	<title>{{ .Page.Title }}</title>
-	<link rel='stylesheet' href='/styles.css'>
-</head>
+{{ partial "head/index.html" . }}
 
 <body>
-	<div class="mt-10 sm:mx-10 mx-3 max-w-3xl">
+	<div class="mt-14 sm:mx-14 mx-3 max-w-3xl">
 		{{ partial "body/nav.html" . }}
 
 		<article class="mt-8">
