--- a/layouts/partials/body/list_entry_post.html
+++ b/layouts/partials/body/list_entry_post.html
@@ -2,7 +2,7 @@
 	<a href="{{ .Permalink }}">
 		<h2 class="text-2xl">{{ .Title }}</h2>
 	</a>
-	<p class="text-gray-600">{{ .Date.Format "2006/01/02" }}
+	<p class="text-gray-600">{{ .Date.Format "2006-01-02" }}
 		&nbsp;•&nbsp;
 		{{ range (.GetTerms "categories") }}
 		<a href="{{ .Permalink }}">{{ .LinkTitle }}</a>
