unique base for all pages

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,7 +4,7 @@
 {{ partial "head/index.html" . }}
 
 <body>
-	<div class="mt-14 sm:mx-14 mx-3 max-w-3xl">
+	<div class="centered-base">
 		{{ partial "body/nav.html" . }}
 		{{ range .Pages }}
 		{{ partial "body/list_entry_post.html" . }}
