--- a/layouts/partials/body/nav.html
+++ b/layouts/partials/body/nav.html
@@ -1,4 +1,6 @@
-<h1 class="text-3xl">{{.Title}}</h1>
+<h1 class="text-3xl font-bold text-gradient bg-gradient-to-r from-pink-400 to-blue-400 max-w-max">
+	{{.Site.Title}}・エリーズ
+</h1>
 <nav class="flex flex-row">
 	<a href="/">
 		<div class="mr-4">publications</div>
