semibold headings + links

--- a/layouts/partials/body/nav.html
+++ b/layouts/partials/body/nav.html
@@ -5,7 +5,11 @@
 	<a href="/">
 		<div class="mr-4">publications</div>
 	</a>
-	<a href="/about">
+	<!-- <a href="/about">
 		<div class="mr-4">à propos</div>
+	</a> -->
+	<a href="https://github.com/eriizu/blog" target="_blank">
+		<div class="mr-4">sources du blog</div>
 	</a>
+	<a rel="me" href="https://potate.space/@elise">masto</a>
 </nav>
