--- a/tailwind.scss
+++ b/tailwind.scss
@@ -18,16 +18,16 @@
     @apply shadow-md;
   }
   article h1 {
-    @apply text-4xl mt-8;
+    @apply text-4xl font-semibold mt-8;
   }
   article h2 {
-    @apply text-3xl mt-8;
+    @apply text-3xl font-semibold mt-8;
   }
   article h3 {
-    @apply text-2xl mt-8;
+    @apply text-2xl font-semibold mt-8;
   }
   article h4 {
-    @apply text-xl mt-8;
+    @apply text-xl font-semibold mt-8;
   }
 }
 
