margin after nav + description

--- a/layouts/partials/body/nav.html
+++ b/layouts/partials/body/nav.html
@@ -1,7 +1,7 @@
 <h1 class="text-3xl font-bold text-gradient bg-gradient-to-r from-pink-400 to-blue-400 max-w-max">
 	{{.Site.Title}}・エリーズ
 </h1>
-<nav class="flex flex-row">
+<nav class="flex flex-row mb-8">
 	<a href="/">
 		<div class="mr-4">publications</div>
 	</a>
@@ -9,7 +9,7 @@
 		<div class="mr-4">à propos</div>
 	</a> -->
 	<a href="https://github.com/eriizu/blog" target="_blank">
-		<div class="mr-4">sources du blog</div>
+		<div class="mr-4">code source</div>
 	</a>
 	<a rel="me" href="https://potate.space/@elise">masto</a>
 </nav>
