--- a/layouts/partials/head/index.html
+++ b/layouts/partials/head/index.html
@@ -1,7 +1,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>{{.Title}}</title>
-	<meta name="description" content="Potate - TEMPLATE_CODE" />
+	<meta name="description" content="Journal personnel de découverte d'outils et de réalisation de projets." />
 	<meta name="author" content="eriizu" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="/styles.css" />
