some changes on links

--- a/layouts/partials/body/nav.html
+++ b/layouts/partials/body/nav.html
@@ -8,8 +8,8 @@
 	<!-- <a href="/about">
 		<div class="mr-4">à propos</div>
 	</a> -->
-	<a href="https://github.com/eriizu/blog" target="_blank">
+	<a href="https://github.com/eriizu/blog" target="_blank" rel="noopener">
 		<div class="mr-4">code source</div>
 	</a>
-	<a rel="me" href="https://potate.space/@elise">masto</a>
+	<a rel="me noopener" href="https://potate.space/@elise" target="_blank">masto</a>
 </nav>
