--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,10 +9,10 @@
 
 		<!-- article header -->
 		<div class="mt-8">
-			<h1 class="text-3xl font-bold">{{ .Title }}</h1>
+			<h1 class="text-2xl font-bold">{{ .Title }}</h1>
 			<p>publié le&nbsp;: {{ .Date.Format "2006-01-02" }}</p>
 			<p>catégorie·s&nbsp;: {{ range (.GetTerms "categories") }}<a
-					href="{{ .Permalink }}">{{ .LinkTitle }}</a>{{ end }}</p>
+					href="{{ .Permalink }}">{{ lower .LinkTitle }}</a>{{ end }}</p>
 		</div>
 
 		<article class="mt-8">
