--- a/layouts/partials/body/list_entry_post.html
+++ b/layouts/partials/body/list_entry_post.html
@@ -1,11 +1,11 @@
 <section class="mt-4">
 	<a href="{{ .Permalink }}">
-		<h2 class="text-2xl">{{ .Title }}</h2>
+		<h2 class="text-2xl font-bold">{{ .Title }}</h2>
 	</a>
 	<p class="text-gray-600">{{ .Date.Format "2006-01-02" }}
 		&nbsp;•&nbsp;
 		{{ range (.GetTerms "categories") }}
-		<a href="{{ .Permalink }}">{{ .LinkTitle }}</a>
+		<a href="{{ .Permalink }}">{{ lower .LinkTitle }}</a>
 		{{ end }}
 	</p>
 
