log on firefox rewrote

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -18,7 +18,13 @@
 		<article class="mt-8">
 			{{ .Page.Content }}
 		</article>
-		<p><a href='/'>back</a></p>
+		<a href="#top">
+			<div
+				class="my-8 p-4 rounded-lg bg-gray-800 hover:bg-gradient-to-r from-pink-500 to-blue-500 text-white max-w-max">
+
+				↑ Retour en haut. ↑
+			</div>
+		</a>
 	</div>
 </body>
 
