--- a/tailwind.scss
+++ b/tailwind.scss
@@ -11,7 +11,7 @@
   p > code {
     @apply border shadow-sm text-sm;
   }
-  article blockquote {
+  /*  article blockquote {
     @apply border shadow mt-4 px-4 py-4 rounded-lg;
   }
   article > blockquote {
@@ -37,7 +37,7 @@
   }
   article a:hover {
     @apply underline text-purple-700;
-  }
+  }*/
 }
 
 @layer components {
