with p color tweak

--- a/tailwind.scss
+++ b/tailwind.scss
@@ -48,7 +48,7 @@
 
   /*! purgecss ignore */
   .highlight {
-    @apply mt-4 p-4 shadow-2xl rounded-lg;
+    @apply shadow-xl rounded-lg;
     background-color: #282a36;
   }
   .centered-base {
