blog is centered like the cool kids to it

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,7 +15,7 @@
 					href="{{ .Permalink }}">{{ lower .LinkTitle }}</a>{{ end }}</p>
 		</div>
 
-		<article class="mt-8 prose">
+		<article class="mt-8 prose max-w-none">
 			{{ .Page.Content }}
 		</article>
 		<a href="#top">
