--- a/layouts/partials/body/nav.html
+++ b/layouts/partials/body/nav.html
@@ -1,15 +1,16 @@
 <h1 class="text-3xl font-bold text-gradient bg-gradient-to-r from-pink-400 to-blue-400 max-w-max">
 	{{.Site.Title}}・エリーズ
 </h1>
-<nav class="flex flex-row mb-8">
+<nav class="flex flex-row mb-8 space-x-4">
+
 	<a href="/">
-		<div class="mr-4">publications</div>
+		publications
 	</a>
 	<!-- <a href="/about">
-		<div class="mr-4">à propos</div>
+		<div class="">à propos</div>
 	</a> -->
 	<a href="https://github.com/eriizu/blog" target="_blank" rel="noopener">
-		<div class="mr-4">code source</div>
+		code source
 	</a>
 	<a rel="me noopener" href="https://potate.space/@elise" target="_blank">masto</a>
 </nav>
